--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: "Sankalp"
+title: "Sabitra Sankalp"
 author: "Sabitra Sankalp"
 description: "My thoughts and opinion about technology." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "sabitrap.44@gmail.com"
-#twitter_username: "twitteruser"
+twitter_username: "panipan3"
 github_username: "Sabitra"
 #linkedin_username: "linkedinuser"
 #facebook_username: username
