--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "My thoughts and opinion about technology." # This will show up in 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "sabitrap.44@gmail.com"
-twitter_username: "panipan3"
+  #twitter_username: "panipan3"
 github_username: "Sabitra"
 #linkedin_username: "linkedinuser"
 #facebook_username: username
