--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,9 @@ plugins:
 titles_from_headings:
   strip_title: true
   collections: true
+    
+header_pages:
+  - resume.html
 
 defaults:
   - scope:
